--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "myapp",
+  "name": "TasteUCLA",
   "version": "1.0.0",
-  "description": "",
+  "description": "CS35L Web App Project",
   "type": "module",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0",
+    "mongoose": "^8.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
