--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
